# backend-website-pmc

./: .gitignore  .shell.sh  Cargo.toml  Rocket.toml  shell.nix  static
db_macro/: Cargo.toml
db_macro/src/: lib.rs
migrations/2020-05-17-095207_stock/: down.sql  up.sql
migrations/2020-06-03-095500_stock/: db.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
