[package]
name = "website-pmc"
version = "0.1.0"
authors = ["TheSirC <clocloranely@hotmail.fr>"]
edition = "2018"

[dependencies]
rocket = "0.4.4"
diesel = { version = "1.0.0", features = ["postgres"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["serve","tera_templates","diesel_postgres_pool"]
