[package]
name = "website-pmc"
version = "0.1.0"
authors = ["TheSirC <clocloranely@hotmail.fr>"]
edition = "2018"

[dependencies]
rocket = "0.5"
diesel = { version = "1.4", features = ["postgres"] }
paste = "0.1"
serde = {version = "1.0", features = ["derive"]}
db_macro = { path = "./db_macro"}

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["serve","tera_templates","diesel_postgres_pool","json"]
